Update hooks, lint fixes, various updates.
